--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,13 @@
 version: '3.5'
 
 services:
-  api:
+  app:
     build: .
     ports:
-      - 80:5000
+      - "80:5000"
     volumes:
-      - .:/api
+      - .:/app
+      - /app/node_modules
+    environment:
+      - PORT=5000
+    command: node server.js
