--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "express": "^4.18.2",
     "node-fetch": "^2.7.0",
     "cors": "^2.8.5",
-    "@vercel/kv": "^1.0.1"
+    "redis": "^4.6.0"
   },
   "devDependencies": {
     "@upstash/redis": "^1.28.0"
