--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,8 @@
   ],
   "functions": {
     "api/index.js": {
-      "maxDuration": 300
+      "maxDuration": 60,
+      "regions": ["gru1"]
     }
   }
 }
