--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,7 @@
   ],
   "functions": {
     "api/index.js": {
-      "maxDuration": 60,
-      "regions": ["gru1"]
+      "maxDuration": 60
     }
   }
 }
