--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "express": "^4.18.2",
     "node-fetch": "^2.7.0",
     "cors": "^2.8.5",
-    "redis": "^4.6.0"
+    "redis": "^4.6.0",
+    "undici": "5.29.0"
   },
   "devDependencies": {
     "@upstash/redis": "^1.28.0"
