--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,9 @@
 version: '3.5'
 
 services:
-  app:
+  api:
     build: .
     ports:
-      - "80:5000"
+      - 80:5000
     volumes:
-      - .:/app
-      - /app/node_modules
-    environment:
-      - PORT=5000
-    command: node server.js
+      - .:/api
